--- a/manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/manager-web/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,11 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>manager-web</servlet-name>
-    <url-pattern>/.html</url-pattern>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.html</url-pattern>
   </servlet-mapping>
 
 </web-app>
