--- a/common-paren/pom.xml
+++ b/common-paren/pom.xml
@@ -52,6 +52,7 @@
       <quartz.version>2.2.2</quartz.version>
     <mybatis-generator-core.version>1.3.5</mybatis-generator-core.version>
     <fastdfs_client.version>1.26.1-RELEASE</fastdfs_client.version>
+    <shiro-all.version>1.2.3</shiro-all.version>
   </properties>
 
     <dependencyManagement>
