--- a/manager-web/src/main/webapp/WEB-INF/web.xml
+++ b/manager-web/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          id="WebApp_ID" version="3.0">
   <display-name>manager-web</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>jsp/index.jsp</welcome-file>
   </welcome-file-list>
   <!-- springmvc的前端控制器 -->
   <servlet>
